kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/002_inheritanceWithAspectAndGenerics/generic1.kmt
/* $Id: $
 * Creation date: February 18, 2008
 * License:
 * Copyright:
 * Authors:
 */

package ~Void;

require kermeta
require "generic.kmt"
using kermeta::standard

class BoundClass inherits GenericClass<Void, String>
{
	//operation test(p : String) is 
	//	abstract
}